# ant-colony-shortest-path

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
data/: european_cities.json
docs/: IMPLEMENTATION.md  README.md  TSP_DOCUMENTATION.md
examples/: example_complex.py  example_simple.py  example_sparse_graph.py  example_tsp_europe.py
notebooks/: ACO_Complete_Tutorial.deepnote  ACO_Complete_Tutorial.ipynb
scripts/: README.md  clean.sh  run_complex.sh  run_custom.sh  run_simple.sh  run_sparse.sh  run_tsp.sh  setup.sh  test_all.sh
src/: __init__.py  aco.py  tsp_aco.py  tsp_utils.py  tsp_visualization.py  visualization.py
web/: README.md  aco-simulation.js  index.html  playground.html  style.css
web/demo/: aco-simulation.js  flowchart.html  playground.html  simple_aco.html  tsp_europe_tour.html
