[tool.poetry]
name = "ant-colony-shortest-path"
version = "0.1.0"
description = "Ant Colony Optimization for Shortest Path Finding in Graphs"
authors = ["kinhluan"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^3.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
folium = "^0.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
